Fix darkmode contrast issue with html mark. (#158)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -62,3 +62,8 @@ img {
     @apply absolute top-0 left-0 w-full h-full;
   }
 }
+
+/* DarkMode for mark*/
+mark {
+  @apply dark:bg-[blue]
+}
